--- a/templates/reports.html
+++ b/templates/reports.html
@@ -10,7 +10,7 @@
     <ul>
       {% for report in reports_list %}
       <li>
-        {{ report.created }}: <a href="{% url 'api:reports-detail' report.pk %}">{{ report.file.file }}</a> - {{ report.status }} <form method="post" action="{% url 'api:reports-review-report' report.pk %}">{% csrf_token %}<button type="submit">Review</button></form>
+        {{ report.created }}: <a href="{% url 'reports_front-detail' report.pk %}">{{ report.file.file }}</a> - {{ report.status }} <form method="post" action="{% url 'reports_front-review-report' report.pk %}">{% csrf_token %}<button type="submit">Review</button></form>
       </li>
       {% endfor %}
     </ul>
@@ -22,5 +22,8 @@
     {{ form.as_p }}
   <button type="submit">Add file for quality check</button>
 </form>
+
+<br>
+<h3><a href="{% url 'home' %}">Home</a></h3>
 
 {% endblock %}
