--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,38 @@
 </head>
 <body>
   <main>
+
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+      <div class="col-md-3 mb-2 mb-md-0">
+        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+          <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+      </div>
+      {% if user.is_authenticated %}
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="{% url 'home' %}" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="{% url 'files_front-list' %}" class="nav-link px-2">Files</a></li>
+        <li><a href="{% url 'reports_front-list' %}" class="nav-link px-2">Reports</a></li>
+      </ul>
+      {% else %}
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="{% url 'home' %}" class="nav-link px-2 link-secondary">Home</a></li>
+      </ul>
+      {% endif %}
+
+      {% if user.is_authenticated %}
+      <div class="col-md-3 text-end">
+        <a href="{% url 'logout' %}"><button type="button" class="btn btn-outline-primary me-2">Logout</button></a>
+      </div>
+      {% else %}
+      <div class="col-md-3 text-end">
+        <a href="{% url 'login' %}"><button type="button" class="btn btn-outline-primary me-2">Login</button></a>
+        <a href="{% url 'signup' %}"><button type="button" class="btn btn-primary">Sign-up</button></a>
+      </div>
+      {% endif %}
+
+    </header>
+
     {% block content %}
     {% endblock %}
   </main>
