--- a/templates/home.html
+++ b/templates/home.html
@@ -5,12 +5,15 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  <h3><a href="{% url 'files_front-list' %}">Your files</a></h3>
-  <h3><a href="{% url 'reports_front-list' %}">Your reports</a></h3>
-  <p><a href="{% url 'logout' %}">Log Out</a></p>
-{% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a> |
-  <a href="{% url 'signup' %}">Sign Up</a>
+  <div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col">
+      <h3><a href="{% url 'files_front-list' %}">Your files</a></h3>
+    </div>
+    <div class="col">
+      <h3><a href="{% url 'reports_front-list' %}">Your reports</a></h3>
+    </div>
+  </div>
+</div>
 {% endif %}
 {% endblock %}
