--- a/templates/report.html
+++ b/templates/report.html
@@ -3,11 +3,11 @@
 {% block title %}Reports{% endblock %}
 
 {% block content %}
-<h2>Report for file {{ report.file.file }}</h2>
+<h2 align="center">Report for file {{ report.file.file }}</h2>
 
 {% for error in report.result %}
-<ul>
-    <li>Last check: {{ error.check_time }} | Line: {{ error.line }} | Column: {{ error.column }} | Error: {{ error.error }}</li>
+<ul class="list-group list-group-flush">
+    <li class="list-group-item">Last check: {{ error.check_time }} | Line: {{ error.line }} | Column: {{ error.column }} | Error: {{ error.error }}</li>
 </ul>
 {% endfor %}
 
