--- a/templates/reports.html
+++ b/templates/reports.html
@@ -4,26 +4,29 @@
 {% block title %}Reports{% endblock %}
 
 {% block content %}
-<h2>Reports</h2>
+<h2 align="center">Reports</h2>
 
 {% if reports_list %}
-    <ul>
+    <ul class="list-group list-group-flush">
       {% for report in reports_list %}
-      <li>
-        {{ report.created }}: <a href="{% url 'reports_front-detail' report.pk %}">{{ report.file.file }}</a> - {{ report.status }} <form method="post" action="{% url 'reports_front-review-report' report.pk %}">{% csrf_token %}<button type="submit">Review</button></form>
+      <li class="list-group-item">
+        {{ report.created }}: <a href="{% url 'reports_front-detail' report.pk %}">{{ report.file.file }}</a> - {{ report.status }} <form method="post" action="{% url 'reports_front-review-report' report.pk %}">
+                                                                                                                                      {% csrf_token %}
+                                                                                                                                      <button type="submit" class="btn btn-primary">Review</button>
+                                                                                                                                    </form>
       </li>
       {% endfor %}
     </ul>
   {% else %}
-    <p>There are no reports.</p>
+    <h5 align="center">There are no reports</h5>
   {% endif %}
-<form method="post">
-  {% csrf_token %}
-    {{ form.as_p }}
-  <button type="submit">Add file for quality check</button>
-</form>
 
 <br>
-<h3><a href="{% url 'home' %}">Home</a></h3>
+{%load crispy_forms_tags %}
+<form method="post">
+  {% csrf_token %}
+  {{ form|crispy }}
+  <button type="submit" class="btn btn-primary" >Add file for quality check</button>
+</form>
 
 {% endblock %}
