--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,27 +4,48 @@
 {% block title %}Files{% endblock %}
 
 {% block content %}
-<h2>Files</h2>
+<h2 align="center">Files</h2>
 
 {% if files_list %}
-    <ul>
+    <ul class="list-group list-group-flush">
       {% for file in files_list %}
-      <li>
-        {{ file.file }} - <a href="{% url 'delete_file' file.pk %}"><button>Delete</button></a>
+      <li class="list-group-item">
+        {{ file.file }} - <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Delete
+                          </button>
       </li>
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Delete</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Are you sure you want to delete "{{ file.file }}"
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <form action="{% url 'delete_file' file.pk %}" method="post">
+                  {% csrf_token %}
+                  <input type="submit" class="btn btn-primary" value="Confirm" />
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
       {% endfor %}
     </ul>
   {% else %}
-    <p>There are no files.</p>
+    <h5 align="center">There are no files</h5>
   {% endif %}
 
+<br>
+{%load crispy_forms_tags %}
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Upload</button>
+  {{ form|crispy }}
+  <button type="submit" class="btn btn-primary" >Upload</button>
 </form>
-
-<br>
-<h3><a href="{% url 'home' %}">Home</a></h3>
 
 {% endblock %}
