--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,10 +4,11 @@
 {% block title %}Log In{% endblock %}
 
 {% block content %}
-<h2>Log In</h2>
+<h2 align="center">Log In</h2>
+{%load crispy_forms_tags %}
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Log In</button>
+  {{ form|crispy }}
+  <button type="submit"  class="btn btn-primary">Log In</button>
 </form>
 {% endblock %}
