--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -4,10 +4,11 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<h2>Sign Up</h2>
+<h2 align="center">Sign Up</h2>
+{%load crispy_forms_tags %}
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Sign Up</button>
+  {{ form|crispy }}
+  <button type="submit" class="btn btn-primary">Sign Up</button>
 </form>
 {% endblock %}
