--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,18 @@
 
     </header>
 
-    {% block content %}
-    {% endblock %}
+      <div class="container text-center">
+        <div class="row align-items-start">
+          <div class="col">
+          </div>
+          <div class="col-11">
+              {% block content %}
+              {% endblock %}
+          </div>
+          <div class="col">
+          </div>
+        </div>
+      </div>
   </main>
 </body>
 </html>
